--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,17 @@ SQLAlchemy==1.2.19
 tqdm==4.55.1
 traitlets==5.0.5
 wcwidth==0.2.5
+twilio==7.9.3
+gunicorn==20.1.0
+appnope==0.1.2
+backcall==0.2.0
+certifi==2022.6.15
+charset-normalizer==2.0.12
+ChatterBot==1.0.4
+chatterbot-corpus==1.2.0
+click==7.1.2
+decorator==4.4.2
+Flask==2.1.2
+idna==3.3
+importlib-metadata==4.11.4
+ipython==7.19.0
